@@ -1,22 +1,12 @@
 package com.example.produtovendas.infra.mappers;
 
 import com.example.produtovendas.domain.Produto;
+import com.example.produtovendas.dtos.ProdutoDto;
 import com.example.produtovendas.infra.entities.ProdutoEntity;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class ProdutoMapper {
-
-    public static Produto paraProduto(ProdutoEntity produtoEntity) {
-        return Produto.builder()
-                .id(produtoEntity.getId())
-                .nome(produtoEntity.getNome())
-                .valor(produtoEntity.getValor())
-                .marca(produtoEntity.getMarca())
-                .inativo(produtoEntity.isInativo())
-                .build();
-    }
+public abstract class ProdutoMapper{
 
     public static ProdutoEntity paraEntity(Produto produto) {
         return ProdutoEntity.builder()
@@ -25,14 +15,52 @@ public class ProdutoMapper {
                 .valor(produto.getValor())
                 .marca(produto.getMarca())
                 .inativo(produto.isInativo())
+                .quantidade(produto.getQuantidade())
                 .build();
     }
 
-    public static List<Produto> paraProdutos(List<ProdutoEntity> produtoEntities) {
-      return produtoEntities.stream().map(ProdutoMapper :: paraProduto).collect(Collectors.toList());
+
+    public static Produto paraDomain(ProdutoEntity produtoEntity) {
+        return Produto.builder()
+                .id(produtoEntity.getId())
+                .nome(produtoEntity.getNome())
+                .valor(produtoEntity.getValor())
+                .marca(produtoEntity.getMarca())
+                .inativo(produtoEntity.isInativo())
+                .quantidade(produtoEntity.getQuantidade())
+                .build();
+    }
+
+    public static Produto paraDomainDeDto(ProdutoDto produtoDto) {
+        return Produto.builder()
+                .nome(produtoDto.nome())
+                .quantidade(produtoDto.quantidade())
+                .marca(produtoDto.marca())
+                .valor(produtoDto.valor())
+                .build();
+    }
+
+    public static ProdutoDto paraDtoDeDomain(Produto produto) {
+        /*return ProdutoDto.builder()
+                .id(produto.getId())
+                .nome(produto.getNome())
+                .marca(produto.getMarca())
+                .quantidade(produto.getQuantidade())
+                .valor(produto.getValor())
+                .build();*/
+        return new ProdutoDto(produto.getId(), produto.getNome(), produto.isInativo() ,produto.getMarca(), produto.getValor(),
+                produto.getQuantidade());
     }
 
     public static List<ProdutoEntity> paraEntitys(List<Produto> produtoList) {
-        return produtoList.stream().map(ProdutoMapper :: paraEntity).collect(Collectors.toList());
+        return produtoList.stream().map(ProdutoMapper::paraEntity).toList();
+    }
+
+    public static List<Produto> paraDomains(List<ProdutoEntity> produtoEntities){
+        return produtoEntities.stream().map(ProdutoMapper::paraDomain).toList();
+    }
+
+    public static List<ProdutoDto> paraDtosDeDomains(List<Produto> produtoList) {
+        return produtoList.stream().map(ProdutoMapper::paraDtoDeDomain).toList();
     }
 }
